# grids

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/cmake/: hexagon-config.cmake
cpp/include/: edge.h  hexagon.h  point.h  triangle.h
cpp/test/: CMakeLists.txt  edge.cpp  hexagon.cpp  point.cpp  tests.cpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
